# sparko-esp-std

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
src/: analog_clock_feature.rs  commands.rs  config.rs  config_store.rs  core.rs  display_mipidsi.rs  dyndns2.rs  esp_http_server copy.rs  esp_http_server.rs  http copy.rs  http.rs  http_server.rs  led.rs  lib.rs  mdns.rs  sparko_esp32_std.rs  wifi.rs
src/display/: jd9853.rs  mod.rs
unused/: http_server.rs
