[package]
name = "sparko-esp-std"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"], optional = true }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"], optional = true }
embedded-svc = { version = "0.29.0", optional = true }
esp-idf-hal = { version = "0.46.2", optional = true }
esp-idf-sys = { version = "0.37.2", optional = true }
anyhow = "1.0.102"
futures = { version = "0.3.32", optional = true }
heapless = "0.9.1"

url = "2.5.8"
indexmap = "2.13.0"
chrono = "0.4.44"
simple-dns = "0.11.2"
croner = "3.0.1"

sparko-embedded-std = { path = "../sparko-embedded-std"}

[features]
default = ["espidf"]
#default = ["espidf", "board-xiao-esp32c6"]
#espidf = ["esp-idf-svc", "embassy-time", "embedded-svc", "esp-idf-hal", "esp-idf-sys", "futures", "embuild"]
espidf = [
  "esp-idf-svc",
  "embassy-time",
  "embedded-svc",
  "esp-idf-hal",
  "esp-idf-sys",
  "futures"
]
simple-led = []
mono-led = []
rgb-led = []
board-cyd = ["rgb-led"]
board-xiao-esp32c6 = ["mono-led"]

[build-dependencies]
#embuild = { version = "0.33", optional = true }
embuild = "0.33"